--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <header>
         <h2>A parenting coach in your pocket</h2>
-        <img src="./images/device mockup 1.svg" alt="app screenshot"
-        <h3>Most parenting resources are built with moms in mind</h3>
+        <img src="./images/device mockup 1.svg" alt="app screenshot">
+        <h3>Most parenting resources are built with moms in mind.</h3>
         <h4>We've created one for you, Dad!</h4>
         <p>
             We want to empower fathers to parent with confidence and enjoy more quality time their kids.
