tweak to one image, using id

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span class="standout-text">Low-effort activity ideas</span>
                 to suit your mood and budget
             </p>
-            <img src="./images/penguin1.svg" alt="penguin having an idea">
+            <img src="./images/penguin1.svg" alt="penguin having an idea" id="first-image">
         </div>
         <div>
             <img src="./images/penguin2.svg" alt="frustrated penguin">
